add some guide